# ollama-cli-ask

./: .gitignore  README.md  SKILL.md  ask.py  ask.sh  ask_simple.py
ask-rs/: Cargo.toml
ask-rs/src/: main.rs
