[package]
name = "ask"
version = "1.0.0"
edition = "2021"
description = "Fast CLI for Ollama - query local LLMs from the command line"
authors = ["Jose Munoz"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
