[package]
name = "ask"
version = "1.0.0"
edition = "2021"
description = "Fast CLI for Ollama - query local LLMs from the command line"
authors = ["Jose Munoz"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
opt-level = 3
lto = true
strip = true
